--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <div class="video-container">
       <video autoplay muted loop id="video-laser">
-        <source src="/images/0720.mp4" />
+        <source src="images/0720.mp4" />
       </video>
       <div class="content">
         <div class="fixture-container">
