--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto">cuarto</h2>
+            <h2 class="fixture-nombre-cuarto">pepita</h2>
           </div>
           <div class="cuarto2">
             <img
