--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">TERESA</h2>
           </div>
           <div class="equipo2">
             <img
@@ -40,7 +40,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">HOLA</h2>
           </div>
           <div class="equipo3">
             <img
@@ -50,7 +50,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">ZAPATA</h2>
           </div>
           <div class="equipo4">
             <img
@@ -60,7 +60,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">LAPLATA</h2>
           </div>
           <div class="equipo5">
             <img
@@ -70,7 +70,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">ESMIA</h2>
           </div>
           <div class="equipo6">
             <img
@@ -80,7 +80,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">KAPLAN</h2>
           </div>
           <div class="equipo7">
             <img
