--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">TERESA</h2>
+            <h2 class="fixture-nombre">CHICOS/TIA</h2>
           </div>
           <div class="equipo2">
             <img
@@ -46,7 +46,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">HOLA</h2>
+            <h2 class="fixture-nombre">BANDA/LOKI</h2>
           </div>
           <div class="equipo3">
             <img
@@ -56,7 +56,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">ZAPATA</h2>
+            <h2 class="fixture-nombre">C.A.L.S.A</h2>
           </div>
           <div class="equipo4">
             <img
@@ -66,7 +66,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">LAPLATA</h2>
+            <h2 class="fixture-nombre">DIECISIETE</h2>
           </div>
           <div class="equipo5">
             <img
@@ -76,7 +76,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">ESMIA</h2>
+            <h2 class="fixture-nombre">SHIBRE</h2>
           </div>
           <div class="equipo6">
             <img
@@ -86,7 +86,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">KAPLAN</h2>
+            <h2 class="fixture-nombre">BRINDIS</h2>
           </div>
           <div class="equipo7">
             <img
@@ -96,7 +96,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">DIFE</h2>
           </div>
           <div class="equipo8">
             <img
@@ -106,7 +106,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">equipo</h2>
+            <h2 class="fixture-nombre">FACULTOS</h2>
           </div>
           <div class="octavo1">
             <img
@@ -116,7 +116,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">octavo</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo2">
             <img
@@ -126,7 +126,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">octavo</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo3">
             <img
@@ -136,7 +136,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">octavo</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo4">
             <img
@@ -146,7 +146,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">octavo</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="cuarto1">
             <img
@@ -156,7 +156,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto">culo</h2>
+            <h2 class="fixture-nombre-cuarto"></h2>
           </div>
           <div class="cuarto2">
             <img
@@ -166,7 +166,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto">cuarto</h2>
+            <h2 class="fixture-nombre-cuarto"></h2>
           </div>
           <div class="semi1">
             <img
@@ -176,7 +176,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi">semi</h2>
+            <h2 class="fixture-nombre-semi"></h2>
           </div>
           <div class="equipo9">
             <img
@@ -186,7 +186,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">COMEMASAS</h2>
           </div>
           <div class="equipo10">
             <img
@@ -196,7 +196,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">CANDELOS</h2>
           </div>
           <div class="equipo11">
             <img
@@ -206,7 +206,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">TUTANKAMON</h2>
           </div>
           <div class="equipo12">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">CENTRO</h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
           </div>
           <div class="equipo14">
             <img
@@ -236,7 +236,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">BANDA/TIOS</h2>
           </div>
           <div class="equipo15">
             <img
@@ -246,7 +246,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">CUATRO/COPAS</h2>
           </div>
           <div class="equipo16">
             <img
@@ -256,7 +256,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">equipo</h2>
+            <h2 class="fixture-nombre-azul">DESGRACIADOS</h2>
           </div>
           <div class="octavo5">
             <img
@@ -266,7 +266,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">octavo</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo6">
             <img
@@ -276,7 +276,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">octavo</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo7">
             <img
@@ -286,7 +286,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">octavo</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo8">
             <img
@@ -296,7 +296,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">octavo</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="cuarto3">
             <img
@@ -306,7 +306,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul">cuarto</h2>
+            <h2 class="fixture-nombre-cuarto-azul"></h2>
           </div>
           <div class="cuarto4">
             <img
@@ -316,7 +316,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul">cuarto</h2>
+            <h2 class="fixture-nombre-cuarto-azul"></h2>
           </div>
           <div class="semi2">
             <img
@@ -326,7 +326,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi-azul">semi</h2>
+            <h2 class="fixture-nombre-semi-azul"></h2>
           </div>
         </div>
       </div>
