--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">BRINDIS</h2>
+            <h2 class="fixture-nombre">DIFE</h2>
           </div>
           <div class="equipo7">
             <img
@@ -96,7 +96,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">DIFE</h2>
+            <h2 class="fixture-nombre">FACULTOS</h2>
           </div>
           <div class="equipo8">
             <img
@@ -106,7 +106,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">FACULTOS</h2>
+            <h2 class="fixture-nombre">COMEMASAS</h2>
           </div>
           <div class="octavo1">
             <img
@@ -186,7 +186,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">COMEMASAS</h2>
+            <h2 class="fixture-nombre-azul">CANDELOS</h2>
           </div>
           <div class="equipo10">
             <img
@@ -196,7 +196,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">CANDELOS</h2>
+            <h2 class="fixture-nombre-azul">TUTANKAMON</h2>
           </div>
           <div class="equipo11">
             <img
@@ -206,7 +206,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">TUTANKAMON</h2>
+            <h2 class="fixture-nombre-azul">CENTRO</h2>
           </div>
           <div class="equipo12">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">CENTRO</h2>
+            <h2 class="fixture-nombre-azul">BANDA/TIOS</h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
+            <h2 class="fixture-nombre-azul">CUATRO/COPA</h2>
           </div>
           <div class="equipo14">
             <img
@@ -236,7 +236,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">BANDA/TIOS</h2>
+            <h2 class="fixture-nombre-azul">DESGRACIA</h2>
           </div>
           <div class="equipo15">
             <img
@@ -246,7 +246,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">CUATRO/COPAS</h2>
+            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
           </div>
           <div class="equipo16">
             <img
@@ -256,7 +256,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">DESGRACIADOS</h2>
+            <h2 class="fixture-nombre-azul">RADIO</h2>
           </div>
           <div class="octavo5">
             <img
