--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
+            <h2 class="fixture-nombre-azul">WATSON</h2>
           </div>
           <div class="equipo16">
             <img
@@ -256,7 +256,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">RADIO</h2>
+            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
           </div>
           <div class="octavo5">
             <img
