--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">CUATRO/COPA</h2>
           </div>
           <div class="octavo8">
             <img
