--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto"></h2>
+            <h2 class="fixture-nombre-cuarto">C.A.L.S.A</h2>
           </div>
           <div class="cuarto2">
             <img
