--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto"></h2>
+            <h2 class="fixture-nombre-cuarto">FACULTOS</h2>
           </div>
           <div class="semi1">
             <img
