--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul"></h2>
+            <h2 class="fixture-nombre-cuarto-azul">TUTANKAMON</h2>
           </div>
           <div class="cuarto4">
             <img
