--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi"></h2>
+            <h2 class="fixture-nombre-semi">FACULTOS</h2>
           </div>
           <div class="equipo9">
             <img
