--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">MISTO/QUENTE</h2>
           </div>
           <div class="equipo12">
             <img
