--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">FEMINAS</h2>
           </div>
           <div class="equipo13">
             <img
