--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo"></h2>
+            <h2 class="fixture-nombre-octavo">CHIQUITOS</h2>
           </div>
           <div class="octavo2">
             <img
