--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">FEMINAS</h2>
           </div>
           <div class="octavo7">
             <img
@@ -286,7 +286,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">MEJORES</h2>
           </div>
           <div class="octavo8">
             <img
@@ -296,7 +296,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">HELALOOP</h2>
           </div>
           <div class="cuarto3">
             <img
