--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">CHIQUITOS</h2>
+            <h2 class="fixture-nombre">LIBICULI</h2>
           </div>
           <div class="equipo3">
             <img
@@ -56,7 +56,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">NUCLEO</h2>
+            <h2 class="fixture-nombre">BAJO/TERAPIA</h2>
           </div>
           <div class="equipo4">
             <img
@@ -66,7 +66,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">MEJORES</h2>
+            <h2 class="fixture-nombre">3 PATAS</h2>
           </div>
           <div class="equipo5">
             <img
@@ -76,7 +76,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">INFILTRADOS</h2>
+            <h2 class="fixture-nombre">PIBARDOS</h2>
           </div>
           <div class="equipo6">
             <img
@@ -86,7 +86,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">GRIDO</h2>
+            <h2 class="fixture-nombre">CHIQUITOS</h2>
           </div>
           <div class="equipo7">
             <img
@@ -96,7 +96,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">HELALOOP</h2>
+            <h2 class="fixture-nombre">GUILLERMA</h2>
           </div>
           <div class="equipo8">
             <img
@@ -106,7 +106,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">PUNTA</h2>
+            <h2 class="fixture-nombre">RUSITOS</h2>
           </div>
           <div class="octavo1">
             <img
@@ -116,7 +116,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">CHIQUITOS</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo2">
             <img
@@ -126,7 +126,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">NUCLEO</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo3">
             <img
@@ -136,7 +136,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">INFILTRADOS</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="octavo4">
             <img
@@ -146,7 +146,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo">PUNTA</h2>
+            <h2 class="fixture-nombre-octavo"></h2>
           </div>
           <div class="cuarto1">
             <img
@@ -156,7 +156,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto">NUCLEO</h2>
+            <h2 class="fixture-nombre-cuarto"></h2>
           </div>
           <div class="cuarto2">
             <img
@@ -166,7 +166,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto">INFILTRADOS</h2>
+            <h2 class="fixture-nombre-cuarto"></h2>
           </div>
           <div class="semi1">
             <img
@@ -176,7 +176,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi">INFILTRADOS</h2>
+            <h2 class="fixture-nombre-semi"></h2>
           </div>
           <div class="equipo9">
             <img
@@ -186,7 +186,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">4 DE 5</h2>
+            <h2 class="fixture-nombre-azul">DISLEXICAS</h2>
           </div>
           <div class="equipo10">
             <img
@@ -196,7 +196,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">FABIO ZERPA</h2>
+            <h2 class="fixture-nombre-azul">AVENGERS</h2>
           </div>
           <div class="equipo11">
             <img
@@ -206,7 +206,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MISTO/QUENTE</h2>
+            <h2 class="fixture-nombre-azul">GRUPA</h2>
           </div>
           <div class="equipo12">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">FEMINAS</h2>
+            <h2 class="fixture-nombre-azul">REMEROS</h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">MARGINALES</h2>
           </div>
           <div class="equipo14">
             <img
@@ -236,7 +236,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">GUALEGUAYCHU'S</h2>
           </div>
           <div class="equipo15">
             <img
@@ -246,7 +246,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">DALTONICA</h2>
           </div>
           <div class="equipo16">
             <img
@@ -256,7 +256,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul"></h2>
+            <h2 class="fixture-nombre-azul">EL GREME</h2>
           </div>
           <div class="octavo5">
             <img
@@ -266,7 +266,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">FABIO/ZERPA</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo6">
             <img
@@ -276,7 +276,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">FEMINAS</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo7">
             <img
@@ -286,7 +286,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">MEJORES</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="octavo8">
             <img
@@ -296,7 +296,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul">HELALOOP</h2>
+            <h2 class="fixture-nombre-octavo-azul"></h2>
           </div>
           <div class="cuarto3">
             <img
@@ -306,7 +306,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul">FABIO/ZERPA</h2>
+            <h2 class="fixture-nombre-cuarto-azul"></h2>
           </div>
           <div class="cuarto4">
             <img
@@ -316,7 +316,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul">MEJORES</h2>
+            <h2 class="fixture-nombre-cuarto-azul"></h2>
           </div>
           <div class="semi2">
             <img
@@ -326,7 +326,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi-azul">FABIO/ZERPA</h2>
+            <h2 class="fixture-nombre-semi-azul"></h2>
           </div>
         </div>
       </div>
