--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo"></h2>
+            <h2 class="fixture-nombre-octavo">GUILLERMA</h2>
           </div>
           <div class="cuarto1">
             <img
