--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">DISLEXICAS</h2>
           </div>
           <div class="octavo6">
             <img
