--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">GRUPA</h2>
           </div>
           <div class="octavo7">
             <img
