--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">NUCLEO</h2>
+            <h2 class="fixture-nombre">FABIO</h2>
           </div>
           <div class="equipo4">
             <img
@@ -186,7 +186,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">DISLEXICAS</h2>
+            <h2 class="fixture-nombre-azul">GUILLERMA</h2>
           </div>
           <div class="equipo10">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">CHICOS TIA</h2>
+            <h2 class="fixture-nombre-azul">DISLEXICAS/h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">FABIO ZERPA</h2>
+            <h2 class="fixture-nombre-azul">CHICOS TIA</h2>
           </div>
           <div class="equipo14">
             <img
@@ -236,7 +236,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">GUILLERMA</h2>
+            <h2 class="fixture-nombre-azul"></h2>
           </div>
           <div class="equipo15">
             <img
