--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">MATAMBRE</h2>
+            <h2 class="fixture-nombre">CHICOS/TIA</h2>
           </div>
           <div class="equipo2">
             <img
@@ -56,7 +56,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">FABIO</h2>
+            <h2 class="fixture-nombre">INFILTRADOS</h2>
           </div>
           <div class="equipo4">
             <img
@@ -196,7 +196,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">INFILTRADOS</h2>
+            <h2 class="fixture-nombre-azul">DISLEXICAS</h2>
           </div>
           <div class="equipo11">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">DISLEXICAS/h2>
+            <h2 class="fixture-nombre-azul">FABIO</h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">CHICOS TIA</h2>
+            <h2 class="fixture-nombre-azul">MATAMBRE</h2>
           </div>
           <div class="equipo14">
             <img
