--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-cuarto-azul"></h2>
+            <h2 class="fixture-nombre-cuarto-azul">C.A.L.S.A</h2>
           </div>
           <div class="semi2">
             <img
