--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-semi-azul"></h2>
+            <h2 class="fixture-nombre-semi-azul">KAPLAN</h2>
           </div>
         </div>
       </div>
