--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">JAZZERAS</h2>
+            <h2 class="fixture-nombre">MOSQUETEROS</h2>
           </div>
           <div class="equipo3">
             <img
@@ -56,7 +56,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">A.B.M.O.D.E.L</h2>
+            <h2 class="fixture-nombre">JAZZERAS</h2>
           </div>
           <div class="equipo4">
             <img
@@ -66,7 +66,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">NENAS</h2>
+            <h2 class="fixture-nombre">WINNERS</h2>
           </div>
           <div class="equipo5">
             <img
@@ -76,7 +76,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">TEAM/FETCH</h2>
+            <h2 class="fixture-nombre">A.B.M.O.D.E.L</h2>
           </div>
           <div class="equipo6">
             <img
@@ -86,7 +86,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">POLVO/HADAS</h2>
+            <h2 class="fixture-nombre">MIKA/PEQUES</h2>
           </div>
           <div class="equipo7">
             <img
@@ -96,7 +96,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">BRITNEY/BITCH</h2>
+            <h2 class="fixture-nombre">NENAS</h2>
           </div>
           <div class="equipo8">
             <img
@@ -106,7 +106,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">CHECHONES</h2>
+            <h2 class="fixture-nombre">PASAPORTE</h2>
           </div>
           <div class="octavo1">
             <img
@@ -186,7 +186,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MATEZZZITOZZ</h2>
+            <h2 class="fixture-nombre-azul">TEAM/FETCH</h2>
           </div>
           <div class="equipo10">
             <img
@@ -206,7 +206,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">PASAPORTE</h2>
+            <h2 class="fixture-nombre-azul">POLVO/HADAS</h2>
           </div>
           <div class="equipo12">
             <img
@@ -216,7 +216,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MIKA/PEKES</h2>
+            <h2 class="fixture-nombre-azul">MATEZZZITOZZ</h2>
           </div>
           <div class="equipo13">
             <img
@@ -226,7 +226,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">WINNERS</h2>
+            <h2 class="fixture-nombre-azul">BRITNEY/BITCH</h2>
           </div>
           <div class="equipo14">
             <img
@@ -236,7 +236,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-azul">MOSQUETEROS</h2>
+            <h2 class="fixture-nombre-azul">CHECHONAS</h2>
           </div>
           <div class="equipo15">
             <img
