--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre">MOSQUETEROS</h2>
+            <h2 class="fixture-nombre">SABE/CANTE</h2>
           </div>
           <div class="equipo3">
             <img
