--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo"></h2>
+            <h2 class="fixture-nombre-octavo">WINNERS</h2>
           </div>
           <div class="octavo3">
             <img
