--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo"></h2>
+            <h2 class="fixture-nombre-octavo">A.B.M.O.D.E.L</h2>
           </div>
           <div class="octavo4">
             <img
