--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
               alt=""
               class="fixture-img"
             />
-            <h2 class="fixture-nombre-octavo-azul"></h2>
+            <h2 class="fixture-nombre-octavo-azul">MENTIRA/CANTALA</h2>
           </div>
           <div class="cuarto3">
             <img
